# ml-aws

./: .gitignore  LICENSE  cli_commands.md  main.py  project_dump.md  project_to_markdown.py  pyproject.toml
configs/: train.yaml
notebooks/: eda.ipynb  exploration.ipynb
src/common/: io.py  logging.py  schemas.py
src/data_pipeline/: load.py  validate.py
src/features/: preprocess.py
